[package]
name = "rstatic"
version = "0.1.1"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Static file serve by Rust"
documentation = "https://github.com/iorust/rstatic"
homepage = "https://github.com/iorust/rstatic"
repository = "https://github.com/iorust/rstatic.git"
readme = "README.md"
keywords = ["file", "static", "server"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "*"
mount = "*"

[dependencies.staticfile]
version = "*"
# features = ["cache"]

[dependencies.clap]
version = "*"
default-features = false
features = ["color"]

[lib]
name = "rstatic"
path = "src/lib.rs"
# dylib, rlib, staticlib
# crate-type = ["staticlib"]

[[bin]]
name = "rstatic"
