[package]
name = "rstatic"
version = "0.1.2"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Static file serve by Rust"
documentation = "https://github.com/iorust/rstatic"
homepage = "https://github.com/iorust/rstatic"
repository = "https://github.com/iorust/rstatic.git"
readme = "README.md"
keywords = ["file", "static", "server"]
license = "MIT/Apache-2.0"

[dependencies]
iron = "^0.2.6"
mount = "^0.0.9"

[dependencies.staticfile]
version = "0.1.0"
# features = ["cache"]

[dependencies.staticdir]
version = "0.3.1"
# features = ["cache"]

[dependencies.clap]
version = "^1.5.5"
default-features = false
features = ["color"]

[lib]
name = "rstatic"
path = "src/lib.rs"
# dylib, rlib, staticlib
# crate-type = ["staticlib"]

[[bin]]
name = "rstatic"
